--- a/index.html
+++ b/index.html
@@ -5081,7 +5081,7 @@ html #layuicss-skincodecss{display:none;position:absolute;width:1989px}.layui-co
 					<div class="bottomTips">温馨提示：每次只能发起一次外出申请，外出申请生效期间内无法再次发起申请。</div>
 
 					<div class="btn_add" onclick="Global_FN.sub()" style="display: none;">提交</div>
-					<div class="btn_cancel" onclick="Global_FN.cancel()">撤销</div>
+					/* <div class="btn_cancel" onclick="Global_FN.cancel()">撤销</div> */
 
 				</div>
 			</form>
